@@ -320,5 +320,7 @@ In v2.06I it is at $0b17 in ROM0.
 
 -debug cpu vista 7 deberia redimensionar pantalla. Ver si pasa lo mismo con vista 8 paws etc
 
+-Ventana con layer de teclado. Carga bmp con paleta de spectrum?
 
+-Tbblue. Ir a 48kb basic se cuelga
 
